ProjetCompil/Verif/Test/fail/affArray1.cas
program
   A : integer;
begin
   A[3] := 3;
end.